src/objects/Accrual_junction__c/Accrual_junction__c.object-meta.xml
<CustomObject>
    <label>Allocation-Claim Junction</label>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>Coop Allocation Claim</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation-Claim Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>