src/objects/Accrual_junction__c/fields/A_A_Vital__c.field-meta.xml
<CustomField>
    <fullName>A_A_Vital__c</fullName>
    <formula>PRM_A_A_Vital__c / Amount_deducted_from_accrual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A&amp;A Vital %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>