src/objects/Accrual_junction__c/fields/Charge_ION_Nuage_Back__c.field-meta.xml
<CustomField>
    <fullName>Charge_ION_Nuage_Back__c</fullName>
    <formula>Amount_deducted_from_accrual__c  *  ION_Nuage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLD Charge ION Nuage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>