src/objects/Accrual_junction__c/fields/PRM_A_A_Vital__c.field-meta.xml
<CustomField>
    <fullName>PRM_A_A_Vital__c</fullName>
    <label>Charge A&amp;A Vital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>